* Use overflow: hidden instead of auto as suggested in bug 9854

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -1325,7 +1325,7 @@ div.gallerybox div.thumb {
 }
 
 div.gallerytext {
-	overflow: auto;
+	overflow: hidden;
 	font-size: 94%;
 	padding: 2px 4px;
 }
